name:                ghc-phase-plugins
version:             0.1.0.0
synopsis:            WIP: Customizable GHC driver
-- description:         
homepage:            https://github.com/nominolo/ghc-phase-plugins
license:             BSD3
license-file:        LICENSE
author:              Thomas Schilling
maintainer:          nominolo@googlemail.com
-- copyright:           
category:            Compiler
build-type:          Simple
cabal-version:       >=1.8

library
  -- exposed-modules:     
  -- other-modules:       
  build-depends:
       base  == 4.6.*
    ,  ghc  == 7.6.*
    ,  ghc-paths  >= 0.1
    ,  directory  == 1.2.*
    ,  filepath == 1.3.*
  exposed-modules:
      Ghc.Api.V76
      Ghc.Api.V76Hsc
      Ghc.Api.Main
  extension: CPP